network-policies/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    env: dev
    app: nginx
  name: nginx
  namespace: dev
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
