network-policies/deny-pod-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-pod
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress: []
